fix shiftkey and wheel deltas, apply flash when clicking buttons, misc style adjustments, ease values independently

--- a/src/css/variaboard.css
+++ b/src/css/variaboard.css
@@ -75,14 +75,14 @@ canvas {
 }
 
 .variaboard-control {
-  background: #222;
+  //background: #222;
   border-bottom: 1px solid #000;
   display: flex;
   transition: background 200ms;
 }
 
 .variaboard-control:hover {
-  background: #333;
+  //background: #333;
   transition-duration: 0ms;
 }
 
@@ -91,12 +91,16 @@ canvas {
 }
 
 .variaboard-control-title {
-  border-right: 1px solid #000;
+  background: #222;
+  border: 1px solid #333;
+  //border-right: 1px solid #000;
+  color: #999;
   flex: 1 1 35%;
   font-size: 0.8em;
   font-weight: 400;
   line-height: 1;
   margin: 0;
+  margin-right: 1px;
   padding: 0.6em 0.75em;
   text-align: right;
   transition: color 200ms;
@@ -108,9 +112,9 @@ canvas {
 }
 
 .variaboard-control-value {
-  background: none;
-  border: none;
-  border-right: 1px solid #000;
+  background: #111;
+  border: 1px solid #333;
+  //border-right: 1px solid #000;
   border-radius: 0;
   box-shadow: inset 0 0 0 1px transparent;
   color: inherit;
@@ -119,9 +123,9 @@ canvas {
   font-size: 0.8em;
   font-weight: 400;
   line-height: 1;
-  margin: 0;
+  margin: 0 1px 0 0;
   padding: 0.6em 0.75em;
-  transition: color 200ms, box-shadow 200ms;
+  transition: color 200ms, border-color 200ms;
   width: 100%;
   -webkit-appearance: none;
 }
@@ -132,7 +136,7 @@ canvas {
 }
 
 .variaboard-control-value:focus {
-  box-shadow: inset 0 0 0 1px #fff;
+  border-color: #fff;
   outline: none;
   transition-duration: 0ms;
 }
@@ -154,7 +158,8 @@ canvas {
   width: 16px;
 }
 
-.variaboard-control-randomize:hover .variaboard-control-randomize-svg {
+.variaboard-control-randomize:hover .variaboard-control-randomize-svg,
+.variaboard-control.variaboard-control-randomizing .variaboard-control-randomize-svg {
   fill: #fff;
   transition-duration: 0ms;
 }
@@ -176,7 +181,8 @@ canvas {
   width: 16px;
 }
 
-.variaboard-control-mutate:hover .variaboard-control-mutate-svg {
+.variaboard-control-mutate:hover .variaboard-control-mutate-svg,
+.variaboard-control.variaboard-control-mutating .variaboard-control-mutate-svg {
   fill: #fff;
   transition-duration: 0ms;
 }
@@ -209,6 +215,7 @@ canvas {
 }
 
 .variaboard-control-range {
+  background: #111;
   cursor: ew-resize;
   flex: 1 1 45%;
   overflow: hidden;
@@ -218,11 +225,12 @@ canvas {
   background: #555;
   height: 101%;
   transform-origin: 0% 50%;
-  transition: background 200ms;
+  transition: background 200ms, transform 200ms ease-out;
   width: 100%;
 }
 
-.variaboard-control:hover .variaboard-control-range-inner {
+.variaboard-control:hover .variaboard-control-range-inner,
+.variaboard-control.variaboard-control-is-dragging .variaboard-control-range-inner {
   background: #fff;
   transition-duration: 0ms;
 }
